<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/nutrition_facts_layout"
    tools:context="com.nickrepetti.simpledietmanager.NutritionFactsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/nutrition_facts_tv_title"
        android:text="@string/nutrition_facts_tv_title"
        android:textSize="42sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_tv_title"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:id="@+id/nutrition_facts_tv_serving_size"
        android:text="@string/nutrition_facts_tv_serving_size"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_tv_title"
        android:layout_toRightOf="@id/nutrition_facts_tv_serving_size"
        android:id="@+id/nutrition_facts_tv_serving_size_amount"
        android:text="@string/nutrition_facts_tv_serving_size_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_tv_serving_size"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:id="@+id/nutrition_facts_tv_servings_per_container"
        android:text="@string/nutrition_facts_tv_servings_per_container"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_tv_serving_size"
        android:layout_toRightOf="@id/nutrition_facts_tv_servings_per_container"
        android:id="@+id/nutrition_facts_tv_servings_per_container_amount"
        android:text="@string/nutrition_facts_tv_servings_per_container_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/nutrition_facts_tv_servings_per_container"
        android:id="@+id/nutrition_facts_rectangle_1"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_1"
        android:layout_alignParentLeft="true"
        android:id="@+id/nutrition_facts_tv_amount"
        android:text="@string/nutrition_facts_tv_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/nutrition_facts_tv_amount"
        android:id="@+id/nutrition_facts_rectangle_2"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_2"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:id="@+id/nutrition_facts_tv_calories"
        android:text="@string/nutrition_facts_tv_calories"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_2"
        android:layout_toRightOf="@id/nutrition_facts_tv_calories"
        android:id="@+id/nutrition_facts_tv_calories_amount"
        android:text="@string/nutrition_facts_tv_calories_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_2"
        android:layout_toLeftOf="@+id/nutrition_facts_tv_fat_calories_amount"
        android:id="@+id/nutrition_facts_tv_fat_calories"
        android:text="@string/nutrition_facts_tv_fat_calories"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:id="@id/nutrition_facts_tv_fat_calories_amount"
        android:text="@string/nutrition_facts_tv_fat_calories_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_below="@id/nutrition_facts_tv_calories"
        android:id="@+id/nutrition_facts_rectangle_3"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_3"
        android:layout_alignParentRight="true"
        android:id="@+id/nutrition_facts_tv_daily_value"
        android:text="@string/nutrition_facts_tv_daily_value"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/nutrition_facts_tv_daily_value"
        android:id="@+id/nutrition_facts_rectangle_4"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_4"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:id="@+id/nutrition_facts_tv_fat"
        android:text="@string/nutrition_facts_tv_fat"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_4"
        android:layout_toRightOf="@id/nutrition_facts_tv_fat"
        android:id="@+id/nutrition_facts_tv_fat_amount"
        android:text="@string/nutrition_facts_tv_fat_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_4"
        android:layout_alignParentRight="true"
        android:id="@+id/nutrition_facts_tv_fat_percent"
        android:text="@string/nutrition_facts_tv_fat_percent"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/nutrition_facts_tv_fat"
        android:id="@+id/nutrition_facts_rectangle_5"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_5"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/nutrition_facts_tv_saturated_fat"
        android:text="@string/nutrition_facts_tv_saturated_fat"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_5"
        android:layout_toRightOf="@id/nutrition_facts_tv_saturated_fat"
        android:id="@+id/nutrition_facts_tv_saturated_fat_amount"
        android:text="@string/nutrition_facts_tv_saturated_fat_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_5"
        android:layout_alignParentRight="true"
        android:id="@+id/nutrition_facts_tv_saturated_fat_percent"
        android:text="@string/nutrition_facts_tv_saturated_fat_percent"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/nutrition_facts_tv_saturated_fat"
        android:id="@+id/nutrition_facts_rectangle_6"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_6"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:id="@+id/nutrition_facts_tv_cholesterol"
        android:text="@string/nutrition_facts_tv_cholesterol"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_6"
        android:layout_toRightOf="@id/nutrition_facts_tv_cholesterol"
        android:id="@+id/nutrition_facts_tv_cholesterol_amount"
        android:text="@string/nutrition_facts_tv_cholesterol_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_6"
        android:layout_alignParentRight="true"
        android:id="@+id/nutrition_facts_tv_cholesterol_percent"
        android:text="@string/nutrition_facts_tv_cholesterol_percent"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/nutrition_facts_tv_cholesterol"
        android:id="@+id/nutrition_facts_rectangle_7"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_7"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:id="@+id/nutrition_facts_tv_sodium"
        android:text="@string/nutrition_facts_tv_sodium"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_7"
        android:layout_toRightOf="@id/nutrition_facts_tv_sodium"
        android:id="@+id/nutrition_facts_tv_sodium_amount"
        android:text="@string/nutrition_facts_tv_sodium_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_7"
        android:layout_alignParentRight="true"
        android:id="@+id/nutrition_facts_tv_sodium_percent"
        android:text="@string/nutrition_facts_tv_sodium_percent"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/nutrition_facts_tv_sodium"
        android:id="@+id/nutrition_facts_rectangle_8"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_8"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:id="@+id/nutrition_facts_tv_carbs"
        android:text="@string/nutrition_facts_tv_carbs"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_8"
        android:layout_toRightOf="@id/nutrition_facts_tv_carbs"
        android:id="@+id/nutrition_facts_tv_carbs_amount"
        android:text="@string/nutrition_facts_tv_carbs_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_8"
        android:layout_alignParentRight="true"
        android:id="@+id/nutrition_facts_tv_carbs_percent"
        android:text="@string/nutrition_facts_tv_carbs_percent"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/nutrition_facts_tv_carbs"
        android:id="@+id/nutrition_facts_rectangle_9"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_9"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/nutrition_facts_tv_fiber"
        android:text="@string/nutrition_facts_tv_fiber"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_9"
        android:layout_toRightOf="@id/nutrition_facts_tv_fiber"
        android:id="@+id/nutrition_facts_tv_fiber_amount"
        android:text="@string/nutrition_facts_tv_fiber_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_9"
        android:layout_alignParentRight="true"
        android:id="@+id/nutrition_facts_tv_fiber_percent"
        android:text="@string/nutrition_facts_tv_fiber_percent"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/nutrition_facts_tv_fiber"
        android:id="@+id/nutrition_facts_rectangle_10"
        android:background="@drawable/rectangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_10"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/nutrition_facts_tv_sugar"
        android:text="@string/nutrition_facts_tv_sugar"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_facts_rectangle_10"
        android:layout_toRightOf="@id/nutrition_facts_tv_sugar"
        android:id="@+id/nutrition_facts_tv_sugar_amount"
        android:text="@string/nutrition_facts_tv_sugar_amount"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/nutrition_facts_tv_sugar"
        android:id="@+id/nutrition_facts_rectangle_11"
        android:background="@drawable/rectangle"/>

</RelativeLayout>
